src/objects/Store__c.object
<CustomObject>
    <description>This is a generic template for Custom Object. With this
		template, you may adjust the default elements and values and add new
		elements and values.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreFormula__c</fullName>
        <label>labelForm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreIdx__c</fullName>
        <displayFormat>ST-{0000}</displayFormat>
        <label>StoreIdx</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>StoreName__c</fullName>
        <label>StoreName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreNumber__c</fullName>
        <description>Store Number</description>
        <label>StoreNumber</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreType__c</fullName>
        <label>StoreType</label>
        <picklist>
            <picklistValues>
                <fullName>CoffeeStore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetailStore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StreetStore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inHouseStore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>closeTime__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>close</description>
        <label>closeTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>emailAdress__c</fullName>
        <description>the Email</description>
        <label>emailAdress</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>frauenquote__c</fullName>
        <label>frauenquote</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>location_store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>location_store</label>
        <referenceTo>location__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>myAutoNumber__c</fullName>
        <displayFormat>ID-{0000}</displayFormat>
        <label>myAutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>myForm__c</fullName>
        <formula>Name  &amp;  StoreIdx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>myForm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>openDate__c</fullName>
        <description>opend Date</description>
        <inlineHelpText>CloseDate</inlineHelpText>
        <label>openDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>open__c</fullName>
        <defaultValue>true</defaultValue>
        <description>open stores</description>
        <inlineHelpText>help</inlineHelpText>
        <label>open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>phoneNumber__c</fullName>
        <label>phoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pick_mulit__c</fullName>
        <label>pick_mulit</label>
        <picklist>
            <picklistValues>
                <fullName>chai</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>choco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>esspresso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>latte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mocha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>soymilk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rollUp__c</fullName>
        <description>rollup</description>
        <label>rollUp</label>
        <summaryForeignKey>Station__c.Store__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <description>lenght 10</description>
        <inlineHelpText>22</inlineHelpText>
        <label>text</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>text_encrypt__c</fullName>
        <label>text_encrypt</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>text_long__c</fullName>
        <description>text long</description>
        <label>text_long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>text_rich__c</fullName>
        <description>rich</description>
        <label>text_rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <description>website</description>
        <label>url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>utilisation__c</fullName>
        <description>auslastung</description>
        <inlineHelpText>auslastung</inlineHelpText>
        <label>auslastung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>